[tool.poetry]
name = "subsuke-notification-server"
version = "0.1.0"
description = ""
authors = ["Yusuke Shimizu <44394399+rabhareit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
schedule = "^0.6.0"
mysql-connector-python = "^8.0.21"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
